alignment fix

--- a/index.css
+++ b/index.css
@@ -1283,7 +1283,7 @@ header .social-icon img {
 }
 
 .btn-container .presale {
-	margin-right: 20px;
+	margin-right: 0px;
 }
 
 .qty-minus, .qty-plus {
